# task_manager

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  setup.cfg
.github/workflows/: task-manager-check.yml
test_api/: .env  settings.py  urls.py
test_api/my_api/: apps.py  constants.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
test_api/my_api/fixtures/: tasks.json
test_api/my_api/migrations/: 0001_initial.py  0002_alter_task_name.py  0002_item_buyer_id.py  0003_rename_buyer_id_item_buyer.py  0004_task_delete_item.py
